--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-torch~=2.0.0
-torchvision~=0.15.1
-scikit-learn~=1.2.2
-pandas~=1.5.3
-matplotlib~=3.7.1
-seaborn~=0.12.2
-tqdm~=4.65.0
-PyYAML~=6.0
-Pillow~=9.4.0
-numpy~=1.24.2
-opencv-python~=4.7.0.72
+matplotlib==3.7.1
+numpy==1.24.2
+opencv-python==4.7.0.72
+pandas==1.5.3
+Pillow==9.4.0
+PyYAML==6.0
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.65.0
+
+
