--- a/conf.yaml
+++ b/conf.yaml
@@ -5,8 +5,7 @@ epochs: 10
 batch: 10
 lr: !!float 5e-3
 raw: '/data/in/'
-preproc: 'unsharp'
-outputs: '/data/out/'
+preproc: 'median'
 class_names:
   - Melanogaster
   - Nova
