--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 torch~=2.0.0
 torchvision~=0.15.1
 scikit-learn~=1.2.2
-pandas~=1.5.3
+pandas==2.0.1
 matplotlib~=3.7.1
 seaborn~=0.12.2
 tqdm~=4.65.0
 PyYAML~=6.0
-Pillow~=9.4.0
+Pillow==9.5.0
 opencv-python~=4.7.0.72
 numpy~=1.24.2
 rembg
